--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,16 @@
         <dependency>
             <groupId>com.h2database</groupId> <artifactId>h2</artifactId> <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
