--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 server.port=5000
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:postgresql://localhost:5432/cardb
+spring.datasource.username=yoofi
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
