--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
+spring.data.rest.base-path=/api
